@@ -1,19 +1,17 @@
-## Getting Started
+## JavaFx User Interface
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+This application is a demo using the JavaFx library and was build using javaFx-sdk-22.0.12
 
-## Folder Structure
+## Compiling program
 
-The workspace contains two folders by default, where:
+1. Ensure you have the JavaFx sdk library downloaded and take note of which directory it is stored.
+2. Open your computer terminal and navigate to the directory you wish to store the project
+3. Run `git clone git@github.com:itsnameissteven/csc372-mod-3.git`
+4. Run `cd csc372-mod-3/`
+5. Run `javac -d ./build/ --module-path {path/to/your/javaFx/lib} --add-modules javafx.controls,javafx.fxml src/menu_interface/*.java`
+6. Run `cd build`
+7. Run `java --module-path {path/to/your/javaFx/lib} --add-modules javafx.controls,javafx.fxml menu_interface.Main`
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+## Using the application
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
-
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
-
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
-# csc372-mod-3
+As a user you can explore different interaction with the program using the menu bar.
